# cartola_datalake

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: _template_extractor.yaml  _template_run.yaml  check_pre_commit.yaml  mesh.yaml  uv_update.yaml
cartola_datalake/api/: echo.py
cartola_datalake/mesh/: checksum.py  io.py  logger.py  settings.py
cartola_datalake/mesh/01_source_to_landing/: atletas_mercado.py  clubes.py  esquemas.py  partidas.py  pontuados.py
cartola_datalake/mesh/02_landing_to_bronze/: atletas_mercado.py  clubes.py  esquemas.py  partidas.py  pontuados.py
cartola_datalake/mesh/landing_to_bronze/: atletas_mercado.py  clubes.py  esquemas.py  partidas.py  pontuados.py
cartola_datalake/mesh/source_to_landing/: atletas_mercado.py  clubes.py  esquemas.py  partidas.py  pontuados.py
datalake/01-landing/season-2025/clubes/: 2025_04_05_clubes.json  2025_06_13_clubes.json
datalake/01-landing/season-2025/esquemas/: 2025_04_05_esquemas.json  2025_12_17_esquemas.json
datalake/01-landing/season-2025/partidas/rodada-01/: partidas_rodada_01.json
datalake/01-landing/season-2025/partidas/rodada-02/: partidas_rodada_02.json
datalake/01-landing/season-2025/partidas/rodada-03/: partidas_rodada_03.json
datalake/01-landing/season-2025/partidas/rodada-04/: partidas_rodada_04.json
datalake/01-landing/season-2025/partidas/rodada-05/: partidas_rodada_05.json
datalake/01-landing/season-2025/partidas/rodada-06/: partidas_rodada_06.json
datalake/01-landing/season-2025/partidas/rodada-07/: partidas_rodada_07.json
datalake/01-landing/season-2025/partidas/rodada-08/: partidas_rodada_08.json
datalake/01-landing/season-2025/partidas/rodada-09/: partidas_rodada_09.json
datalake/01-landing/season-2025/partidas/rodada-10/: partidas_rodada_10.json
datalake/01-landing/season-2025/partidas/rodada-11/: partidas_rodada_11.json
datalake/01-landing/season-2025/partidas/rodada-12/: partidas_rodada_12.json
datalake/01-landing/season-2025/partidas/rodada-13/: partidas_rodada_13.json
datalake/01-landing/season-2025/partidas/rodada-14/: partidas_rodada_14.json
datalake/01-landing/season-2025/partidas/rodada-15/: partidas_rodada_15.json
datalake/01-landing/season-2025/partidas/rodada-16/: partidas_rodada_16.json
datalake/01-landing/season-2025/partidas/rodada-17/: partidas_rodada_17.json
datalake/01-landing/season-2025/partidas/rodada-18/: partidas_rodada_18.json
datalake/01-landing/season-2025/partidas/rodada-19/: partidas_rodada_19.json
datalake/01-landing/season-2025/partidas/rodada-20/: partidas_rodada_20.json
datalake/01-landing/season-2025/partidas/rodada-21/: partidas_rodada_21.json
datalake/01-landing/season-2025/partidas/rodada-22/: partidas_rodada_22.json
datalake/01-landing/season-2025/partidas/rodada-23/: partidas_rodada_23.json
datalake/01-landing/season-2025/partidas/rodada-24/: partidas_rodada_24.json
datalake/01-landing/season-2025/partidas/rodada-25/: partidas_rodada_25.json
datalake/01-landing/season-2025/partidas/rodada-26/: partidas_rodada_26.json
datalake/01-landing/season-2025/partidas/rodada-27/: partidas_rodada_27.json
datalake/01-landing/season-2025/partidas/rodada-28/: partidas_rodada_28.json
datalake/01-landing/season-2025/partidas/rodada-29/: partidas_rodada_29.json
datalake/01-landing/season-2025/partidas/rodada-30/: partidas_rodada_30.json
datalake/01-landing/season-2025/partidas/rodada-31/: partidas_rodada_31.json
datalake/01-landing/season-2025/partidas/rodada-32/: partidas_rodada_32.json
datalake/01-landing/season-2025/partidas/rodada-33/: partidas_rodada_33.json
datalake/01-landing/season-2025/partidas/rodada-34/: partidas_rodada_34.json
datalake/01-landing/season-2025/partidas/rodada-35/: partidas_rodada_35.json
datalake/01-landing/season-2025/partidas/rodada-36/: partidas_rodada_36.json
datalake/01-landing/season-2025/partidas/rodada-37/: partidas_rodada_37.json
datalake/01-landing/season-2025/partidas/rodada-38/: partidas_rodada_38.json
datalake/02-bronze/season-2025/atletas_mercado/: clubes.csv  posicoes.csv  status.csv
datalake/02-bronze/season-2025/clubes/: clubes.csv
datalake/02-bronze/season-2025/esquemas/: esquemas.csv
datalake/02-bronze/season-2025/partidas/: clubes.csv  partidas.csv
datalake/02-bronze/season-2025/pontuados/: clubes.csv  pontuados.csv  posicoes.csv
