[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartola-datalake"
version = "0.1.0"
description = "Este projeto tem como objetivo criar um datalake para o CartolaFC"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "adntayer" }
]
license = { text = "MIT" }
dependencies = [
  "lxml==5.3.0",
  "openpyxl==3.1.5",
  "pandas==2.2.1",
  "requests==2.31.0",
  "tqdm==4.66.5"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
  # add other dev dependencies from dev.txt here
]

[tool.setuptools]
package-dir = { "" = "cartola_datalake/api" }

[tool.setuptools.packages.find]
where = ["cartola_datalake/api"]
