[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartola-datalake"
version = "0.1.0"
description = "Este projeto tem como objetivo criar um datalake para o CartolaFC"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "adntayer" }
]
license = { text = "MIT" }
dependencies = [
    "lxml>=5.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
